[tool.poetry]
name = "0_ds-baseproject"
version = "0.1.0"
description = "Base python project"
authors = ["Recode developers"]

[tool.poetry.dependencies]
python = "3.7"
pandas = "*"
seaborn = "*"
scikit-learn = "*"
jupyterlab = "*"
jupyter-contrib-nbextensions = "*"
xlrd = "*"
opencv-python = "^4.5.4"
keras = "^2.7.0"
tensorflow = "^2.7.0"
Keras-Applications = "^1.0.8"
keras-resnet = "^0.2.0"
torchvision = "^0.11.2"
scikit-image = "^0.19.1"
imutils = "^0.5.4"
gdown = "^4.2.0"
ipywidgets = "^7.6.5"
widgetsnbextension = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"